Fix #16
