# src/main/Main.kt
@@ -31,55 +31,59 @@ fun Application.main() {
             if (request.topic != null && request.text != null) {
                 call.respond(HttpStatusCode.BadRequest, QuizRequest.invalidMessage)
             } else {
-                call.respond(if (request.text != null) quizText(request) else quizTopic(request))
+                with(QuizGenerator(request)) { call.respond(if (request.text != null) quizText() else quizTopic()) }
             }
         }
         get("health_check") { call.respond(HttpStatusCode.NoContent) }
     }
 }
 
-/** Creates a quiz for a [QuizRequest.topic]. If the [QuizRequest.topic] is `null`, a random topic will be chosen. */
-private suspend fun quizTopic(request: QuizRequest): QuizResponse {
-    val topic = request.topic ?: search()[0].title
-    val page = getPage(topic)
-    val documents = page
-        .filterKeys { it !in listOf("See also", "References", "Further reading", "External links") }
-        .values
-    val processedSentences = processSentences(documents.toList(), request.configuration)
-    return QuizResponse(
-        assembleQuestions(processedSentences, request.configuration, request.max),
-        QuizMetadata(topic, getUrl(topic)),
-        page["See also"]?.split("\n")
-    )
-}
+internal class QuizGenerator(private val request: QuizRequest) {
+    /** Creates a quiz for a [QuizRequest.topic] (if `null`, a random topic will be chosen. */
+    internal suspend fun quizTopic(): QuizResponse {
+        val topic = request.topic ?: search()[0].title
+        val page = getPage(topic)
+        val documents = page
+            .filterKeys { it !in listOf("See also", "References", "Further reading", "External links") }
+            .values
+        val processedSentences = processSentences(documents.toList())
+        return QuizResponse(
+            assembleQuestions(processedSentences),
+            QuizMetadata(topic, getUrl(topic)),
+            page["See also"]?.split("\n")
+        )
+    }
 
-/** Creates a [QuizResponse] for a non-null [QuizRequest.text]. */
-private suspend fun quizText(request: QuizRequest): QuizResponse = with(request) {
-    val processedSentences = processSentences(text!!, configuration)
-    QuizResponse(assembleQuestions(processedSentences, configuration, max), related = findRelatedTopics(text))
-}
+    /** Creates a [QuizResponse] for a non-null [QuizRequest.text]. */
+    internal suspend fun quizText(): QuizResponse =
+        QuizResponse(assembleQuestions(processSentences(request.text!!)), related = findRelatedTopics(request.text))
 
-/** Processes [sections] of text (e.g., a section on the early life of Bill Gates) according to the [configuration]. */
-private fun processSentences(sections: List<String>, configuration: QuizConfiguration): List<ProcessedSentence> =
-    configuration.types
+    /** Creates [ProcessedSentence]s from [sections] of text (e.g., a section on the early life of Bill Gates). */
+    private fun processSentences(sections: List<String>): List<ProcessedSentence> = request.types
         .flatMap { entity ->
             findNames(sections.map { tokenize(it) }, entity)
         }
-        .let { if (configuration.duplicates.duplicateSentences) it else filterSentences(it) }
+        .let { sentences ->
+            if (request.duplicateSentences) return@let sentences
+            sentences.fold(mutableListOf()) { list, processed ->
+                if (processed.context.sentence !in list.map { it.context.sentence }) list.add(processed)
+                list
+            }
+        }
 
-/** Assembles [QuizQuestion]s from [sentences] according to the [config]. */
-private fun assembleQuestions(
-    sentences: List<ProcessedSentence>,
-    config: QuizConfiguration,
-    max: Int?
-): List<QuizQuestion> = generateQuestions(sentences, config).let { if (max == null) it else it.take(max) }
+    private fun assembleQuestions(sentences: List<ProcessedSentence>): List<QuizQuestion> =
+        generateQuestions(sentences).let { if (request.max == null) it else it.take(request.max) }
 
-/** Filters unique [sentences] by their [ProcessedContext.sentence]s. */
-private fun filterSentences(sentences: List<ProcessedSentence>): List<ProcessedSentence> =
-    sentences.fold(mutableListOf()) { list, processed ->
-        if (processed.context.sentence !in list.map { it.context.sentence }) list.add(processed)
-        list
-    }
+    internal fun generateQuestions(sentences: List<ProcessedSentence>): List<QuizQuestion> =
+        createQuestions(sentences, request.types, request.allowSansYears)
+            .filterValues { it.isNotEmpty() }
+            .flatMap { if (request.duplicateSentences) it.value else listOf(it.value.random()) }
+            .fold(mutableListOf<QuizQuestion>()) { list, question ->
+                val isUniqueAnswer = question.answer !in list.map { it.answer }
+                list.apply { if (request.duplicateAnswers || isUniqueAnswer) add(question) }
+            }
+            .shuffled()
+}
 
 /** Finds topics related to [sections] on Wikipedia (ordered with the most relevant first). */
 internal suspend fun findRelatedTopics(sections: List<String>): List<String> {
@@ -97,16 +101,3 @@ internal suspend fun findRelatedTopics(sections: List<String>): List<String> {
             search(entity).let { it.isNotEmpty() && it[0].title == entity }
         }
 }
-
-/** Generates [QuizQuestion]s from [sentences] as stated in the [configuration]. */
-internal fun generateQuestions(
-    sentences: List<ProcessedSentence>,
-    configuration: QuizConfiguration
-): List<QuizQuestion> = createQuestions(sentences, configuration.types, configuration.allowSansYears)
-    .filterValues { it.isNotEmpty() }
-    .flatMap { if (configuration.duplicates.duplicateSentences) it.value else listOf(it.value.random()) }
-    .fold(mutableListOf<QuizQuestion>()) { list, question ->
-        val isUniqueAnswer = question.questionAnswer.answer !in list.map { it.questionAnswer.answer }
-        list.apply { if (configuration.duplicates.duplicateAnswers || isUniqueAnswer) add(question) }
-    }
-    .shuffled()
